--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,82 @@ body {
         width: 100%;
         height: 100%;
     }
+    .container2 {
+        display: flex;
+        flex-direction: column;
+    }
+    .sec-title {
+        padding: 0 20px;
+        font-size: 30px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: grey;
+        opacity: 0.8;
+    }
+    .player1 {
+        position: absolute;
+        flex: 0.5;
+        z-index: 10;
+        width: 300px;
+        height: 350px;
+
+    }
+    .features{
+        width: 100%;
+    }
+    .swiper-container {
+        position: relative;
+        margin-top: 350px;
+        width: 100%;
+        height: 100%;
+    }
+    .ft-title {
+        display: flex;
+        flex-direction: row;
+        
+    }
+    .title {
+        color: grey;
+        font-size: 25px;
+        opacity: 08;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+    .num {
+        color: black;
+        font-size: 25px;
+        margin-right: 5px;
+        border-bottom: solid 4px rgb(93, 111, 210);
+    }
+    .num3 {
+        color: black;
+        font-size: 25px;
+        margin-right: 5px;
+        border-bottom: solid 3px white;
+    }
+    .square-mode {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        align-items: center;
+        text-align: center;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color:white;
+        height: 250px !important;
+    }
+    .white {
+        color: black;
+    }
+    .grey {
+        color: black;
+        background-color: 	#F2F1EF;
+    }
+    .purple {
+        background-color: rgb(93, 111, 210);
+    }
+    .dark-purple {
+        background-color: rgba(26, 30, 65, 0.836);
+        color: white;
+    }
+    
     /* End of Section 2 */
 
     /* Section 3 */
