--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
     margin: 0;
 }
 
-@media screen and (max-width:400px){
+@media screen and (max-width:440px){
     /* Section 1 */
     .section-1 {
         width: 100%;
@@ -129,7 +129,6 @@ body {
     /* Section 2 */
     .section-2 {
         width: 100%;
-        height: 100%;
     }
     .container2 {
         display: flex;
@@ -148,7 +147,6 @@ body {
         z-index: 10;
         width: 300px;
         height: 350px;
-
     }
     .features{
         width: 100%;
@@ -157,7 +155,6 @@ body {
         position: relative;
         margin-top: 350px;
         width: 100%;
-        height: 100%;
     }
     .ft-title {
         display: flex;
@@ -176,12 +173,7 @@ body {
         margin-right: 5px;
         border-bottom: solid 4px rgb(93, 111, 210);
     }
-    .num3 {
-        color: black;
-        font-size: 25px;
-        margin-right: 5px;
-        border-bottom: solid 3px white;
-    }
+    
     .square-mode {
         display: flex;
         flex-direction: column;
@@ -190,7 +182,7 @@ body {
         text-align: center;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         color:white;
-        height: 250px !important;
+        height: 270px !important;
     }
     .white {
         color: black;
@@ -212,11 +204,88 @@ body {
     /* Section 3 */
     .section-3 {
         width: 100%;
-        height: 60%;
     }
+    .actions {
+        display: flex;
+        flex-direction: column;
+    }
+    .action {
+        display: flex;
+        flex-direction: column;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        padding-bottom: 20px;
+    }
+    .action-img {
+        width: 100%;
+        height: 300px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .img1 {
+        background-image: url("./../assets/active.jpg") ;
+    }
+    .img2 {
+        background-image: url("./../assets/coach.jpg") ;
+    }
+    .img3 {
+        background-image: url("./../assets/team.jpg") ;
+    }
+    .cont-number {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        margin-top: 260px;
+        margin-left: 20px; 
+        width: 50px;
+        height: 50px;
+        background-color: rgb(93, 111, 210);
+    }
+    .number {
+        width: 20px;
+        font-size: 20px;
+        color: white;
+        border-bottom: solid 4px white;
+    }
+    .action-title {
+        color: grey;
+        opacity: 0.8;
+        margin-left: 20px;
+    }
+    .action-text {
+        width: 70%;
+        text-align: initial;
+        margin-left: 20px;
+    }
+    .hr {
+        width: 20px;
+        height: 5px;
+        margin-left: 20px;
+        background-color:rgb(93, 111, 210);
+        
+    }
+    /* End of section 3 */
+
+    /* Section 4 */
     .section-4 {
         width: 100%;
-        height: 60%;
+        background-color: aquamarine;
+    }
+    .footer {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        background-image: 
+        linear-gradient(
+        rgba(8, 10, 29, 0.836), 
+        rgba(26, 30, 65, 0.836)
+        ),
+        url("./../assets/cover2.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
     }
     
 }
