--- a/css/styles.css
+++ b/css/styles.css
@@ -270,13 +270,13 @@ body {
     /* Section 4 */
     .section-4 {
         width: 100%;
-        background-color: aquamarine;
     }
     .footer {
         width: 100%;
         height: 100%;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
         background-image: 
         linear-gradient(
         rgba(8, 10, 29, 0.836), 
@@ -286,6 +286,42 @@ body {
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
+    }
+    .logo-play {
+        margin-top: 100px;
+        margin-left: 35%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        padding: 10px;
+        width: 80px;
+        height: 80PX;
+        border-radius: 30px;
+        background-color: rgb(93, 111, 210);
+    }
+    .foo-txt {
+        margin-left: 30px;
+        color: white;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+    .p1 {
+        margin-block-start: 1em;
+        margin-block-end: 0em;
+        font-size: 32px;
+        letter-spacing: 4px;
+    }
+    .media-icons {
+        padding: 20px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        background-image: 
+        linear-gradient(
+        rgba(8, 10, 29, 0.536), 
+        rgba(26, 30, 65, 0.536)
+        );
     }
     
 }
