--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,335 @@ body {
     padding: 0;
     margin: 0;
 }
+@media screen and (min-width:440px){
+    /* Section 1 */
+    .section-1 {
+        width: 100%;
+        height: 100%;
+    }
+    .landing {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        background-image: 
+        linear-gradient(
+        rgba(8, 10, 29, 0.836), 
+        rgba(26, 30, 65, 0.836)
+        ),
+        url("./../assets/cover1.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        flex: 0.2;
+        color: white;
+        font-family: 'Courier New', Courier, monospace;
+    }
+    .p-header {
+        display: block;
+        font-size: 20px;
+    }
+    .logo {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-content: center;
+        align-items: center;
+    }
+    .logo p {
+        font-weight: bold;
+        font-size: 30px;
+    }
+    .arrow-icon {
+        padding: 10px;
+        width: 25px;
+        height: 25px;
+    }
+    .banner-container {
+        flex: 0.9;
+        padding: 60px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 53px;
+        color: white;
+    }
+    .line2{
+        margin-left: 50px;
+        width: 90%;
+    }
+    .buttons-container {
+        z-index: 10;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-content: center;
+        align-items: center;
+    }
+    .btn-store {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-content: center;
+        align-items: center;
+        padding: 10px;
+        width: 360px;
+        height: 90PX;
+        border-radius: 55px;
+        text-align: center;
+        background-color: rgb(93, 111, 210);
+        font-size: 25px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: white;
+    }
+    .btn-store:active{
+        -webkit-transform:scale(0.9); 
+        -moz-transform:scale(0.9); 
+        -ms-transform:scale(0.9); 
+        -o-transform:scale(0.9); 
+        transform:scale(0.9); 
+        -webkit-box-shadow:0px 0px 20px #FFF; 
+        -moz-box-shadow:0px 0px 20px #FFF; 
+        -o-box-shadow:0px 0px 20px #FFF; 
+        box-shadow:0px 0px 20px #FFF; 
+    }
+    .btns-icon {
+        width: 60px;
+        height: 60px;
+    }
+    .sports-list {
+        margin-top: 30px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 14px;
+        color: rgb(148, 173, 211);
+    }
+    .sport1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 80%;
+    }
+    li {
+        padding: 0 22px;
+        list-style: none;
+    }
+    .sport2 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 80%;
+    }
+    /* End of Section 1 */
 
+    /* Section 2 */
+    .section-2 {
+        width: 100%;
+    }
+    .container2 {
+        display: flex;
+        flex-direction: column;
+    }
+    .sec-title {
+        padding: 0 20px;
+        font-size: 30px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: grey;
+        opacity: 0.8;
+    }
+    .player1 {
+        position: absolute;
+        flex: 0.5;
+        z-index: 10;
+        width: 300px;
+        height: 350px;
+    }
+    .features{
+        width: 100%;
+    }
+    .swiper-container {
+        position: relative;
+        margin-top: 350px;
+        width: 100%;
+    }
+    .ft-title {
+        display: flex;
+        flex-direction: row;
+        
+    }
+    .title {
+        color: grey;
+        font-size: 25px;
+        opacity: 08;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+    .num {
+        color: black;
+        font-size: 25px;
+        margin-right: 5px;
+        border-bottom: solid 4px rgb(93, 111, 210);
+    }
+    
+    .square-mode {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        align-items: center;
+        text-align: center;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color:white;
+        height: 270px !important;
+    }
+    .white {
+        color: black;
+    }
+    .grey {
+        color: black;
+        background-color: 	#F2F1EF;
+    }
+    .purple {
+        background-color: rgb(93, 111, 210);
+    }
+    .dark-purple {
+        background-color: rgba(26, 30, 65, 0.836);
+        color: white;
+    }
+    
+    /* End of Section 2 */
+
+    /* Section 3 */
+    .section-3 {
+        width: 100%;
+    }
+    .actions {
+        display: flex;
+        flex-direction: column;
+    }
+    .action {
+        display: flex;
+        flex-direction: column;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        padding-bottom: 20px;
+    }
+    .action-img {
+        width: 100%;
+        height: 700px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .img1 {
+        background-image: url("./../assets/active.jpg") ;
+    }
+    .img2 {
+        background-image: url("./../assets/coach.jpg") ;
+    }
+    .img3 {
+        background-image: url("./../assets/team.jpg") ;
+    }
+    .cont-number {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        margin-top: 60%;
+        margin-left: 20px; 
+        width: 120px;
+        height: 120px;
+        background-color: rgb(93, 111, 210);
+    }
+    .number {
+        width: 30px;
+        font-size: 30px;
+        color: white;
+        border-bottom: solid 4px white;
+    }
+    .action-title {
+        padding: 10px;
+        color: grey;
+        opacity: 0.8;
+        font-size: 55px;
+        margin-left: 20px;
+    }
+    .action-text {
+        width: 70%;
+        text-align: initial;
+        margin-left: 20px;
+        font-size: 40px;
+    }
+    .hr {
+        width: 35px;
+        height: 10px;
+        margin-left: 20px;
+        background-color:rgb(93, 111, 210);
+        
+    }
+    /* End of section 3 */
+
+    /* Section 4 */
+    .section-4 {
+        width: 100%;
+    }
+    .footer {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-image: 
+        linear-gradient(
+        rgba(8, 10, 29, 0.836), 
+        rgba(26, 30, 65, 0.836)
+        ),
+        url("./../assets/cover2.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .logo-play {
+        margin-top: 160px;
+        margin-left: 41%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        padding: 10px;
+        width:200px;
+        height:200PX;
+        border-radius: 30px;
+        background-color: rgb(93, 111, 210);
+    }
+    .foo-txt {
+        margin-left: 30px;
+        color: white;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+    .foo-txt p{
+        font-size: 40px;
+    }
+    .p1 {
+        margin-block-start: 1em;
+        margin-block-end: 0em;
+        font-size: 182px;
+        letter-spacing: 4px;
+    }
+    .media-icons {
+        padding: 20px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        background-image: 
+        linear-gradient(
+        rgba(8, 10, 29, 0.536), 
+        rgba(26, 30, 65, 0.536)
+        );
+    }
+    
+}
 @media screen and (max-width:440px){
     /* Section 1 */
     .section-1 {
@@ -36,6 +364,9 @@ body {
         width: 100%;
         color: white;
         font-family: 'Courier New', Courier, monospace;
+    }
+    .p-header {
+        display: none;
     }
     .logo {
         display: flex;
