--- a/css/styles.css
+++ b/css/styles.css
@@ -52,8 +52,8 @@ body {
     }
     .arrow-icon {
         padding: 10px;
-        width: 25px;
-        height: 25px;
+        width: 35px;
+        height: 35px;
     }
     .banner-container {
         flex: 0.9;
@@ -139,7 +139,15 @@ body {
     }
     .sec-title {
         padding: 0 20px;
-        font-size: 30px;
+        font-size: 90px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: grey;
+        opacity: 0.8;
+    }
+    .sec-title-1 {
+        margin-left: 500px;
+        padding: 0 20px;
+        font-size: 90px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         color: grey;
         opacity: 0.8;
@@ -148,44 +156,89 @@ body {
         position: absolute;
         flex: 0.5;
         z-index: 10;
-        width: 300px;
-        height: 350px;
+        width: 450px;
+        height: 750px;
+    }
+    .player1-1 {
+        position: absolute;
+        margin-left: 560px;
+        flex: 0.5;
+        z-index: 10;
+        width: 450px;
+        height: 750px;
+        
     }
     .features{
         width: 100%;
     }
     .swiper-container {
-        position: relative;
-        margin-top: 350px;
-        width: 100%;
+        display: none;
     }
     .ft-title {
         display: flex;
         flex-direction: row;
-        
     }
     .title {
         color: grey;
-        font-size: 25px;
+        font-size: 35px;
         opacity: 08;
+        text-align: left;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
+        margin-block-start: 0em;
+        margin-block-end: 0em;
     }
     .num {
         color: black;
-        font-size: 25px;
+        font-size: 35px;
         margin-right: 5px;
         border-bottom: solid 4px rgb(93, 111, 210);
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+    }
+    .num3 {
+        color: black;
+        font-size: 35px;
+        margin-right: 5px;
+        border-bottom: solid 4px white;
+        margin-block-start: 0em;
+        margin-block-end: 0em;
     }
     
     .square-mode {
         display: flex;
-        flex-direction: column;
-        align-content: center;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-content: flex-end;
         align-items: center;
-        text-align: center;
+        text-align: left;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         color:white;
-        height: 270px !important;
+        height: 290px !important;
+    }
+    .square-mode-1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-content: flex-start;
+        align-items: center;
+        text-align: left;
+        padding-left: 15px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color:white;
+        height: 290px !important;
+    }
+    .inner {
+        display: flex;
+        flex-direction: column;
+    }
+    .p-features {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        width: 550px;
+        padding-right: 15px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 30px;
     }
     .white {
         color: black;
@@ -309,17 +362,23 @@ body {
     }
     .foo-txt {
         margin-left: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         color: white;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-    }
-    .foo-txt p{
-        font-size: 40px;
     }
     .p1 {
         margin-block-start: 1em;
         margin-block-end: 0em;
-        font-size: 182px;
-        letter-spacing: 4px;
+        font-size: 92px;
+        letter-spacing: 10px;
+    }
+    .p2 {
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+        font-size: 45px;
     }
     .media-icons {
         padding: 20px;
@@ -336,10 +395,7 @@ body {
 }
 @media screen and (max-width:440px){
     /* Section 1 */
-    .section-1 {
-        width: 100%;
-        height: 100%;
-    }
+    
     .landing {
         width: 100%;
         height: 100%;
@@ -472,6 +528,13 @@ body {
         color: grey;
         opacity: 0.8;
     }
+    .sec-title-1 {
+        padding: 0 20px;
+        font-size: 30px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: grey;
+        opacity: 0.8;
+    }
     .player1 {
         position: absolute;
         flex: 0.5;
@@ -479,10 +542,18 @@ body {
         width: 300px;
         height: 350px;
     }
-    .features{
+    .player1-1{
+        position: absolute;
+        flex: 0.5;
+        z-index: 10;
+        width: 300px;
+        height: 350px;
+    }
+    .features-mobile{
         width: 100%;
     }
     .swiper-container {
+        display: block;
         position: relative;
         margin-top: 350px;
         width: 100%;
@@ -504,8 +575,7 @@ body {
         margin-right: 5px;
         border-bottom: solid 4px rgb(93, 111, 210);
     }
-    
-    .square-mode {
+    .square-mode-mobile {
         display: flex;
         flex-direction: column;
         align-content: center;
@@ -514,6 +584,18 @@ body {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         color:white;
         height: 270px !important;
+    }
+    .square-mode {
+        display: none;
+    }
+    .square-mode-1 {
+        display: none;
+    }
+    .inner {
+        display: none;
+    }
+    .p-features {
+        display: none;
     }
     .white {
         color: black;
@@ -620,7 +702,7 @@ body {
     }
     .logo-play {
         margin-top: 100px;
-        margin-left: 35%;
+        margin-left: 38%;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -633,7 +715,10 @@ body {
         background-color: rgb(93, 111, 210);
     }
     .foo-txt {
-        margin-left: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         color: white;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
