starting web size

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,10 @@ html {
 body {
     padding: 0;
     margin: 0;
+    max-width: 100%;
+    overflow-x: hidden;
 }
-@media screen and (min-width:440px){
+@media screen and (min-width:1200px) {
     /* Section 1 */
     .section-1 {
         width: 100%;
@@ -29,7 +31,8 @@ body {
     .header {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
+        padding: 0 50px;
         align-items: center;
         flex: 0.2;
         color: white;
@@ -56,7 +59,7 @@ body {
         height: 35px;
     }
     .banner-container {
-        flex: 0.9;
+        flex: 0.5;
         padding: 60px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: 53px;
@@ -106,26 +109,25 @@ body {
         height: 60px;
     }
     .sports-list {
-        margin-top: 30px;
+        display: block;
+        flex: 0.2;
+        margin-top: 28px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 14px;
+        font-size: 22px;
         color: rgb(148, 173, 211);
+    }
+    .sports-list-mobile {
+        display: none;
     }
     .sport1 {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
-        width: 80%;
+        justify-content: space-between;
+        width: 90%;
     }
     li {
         padding: 0 22px;
         list-style: none;
-    }
-    .sport2 {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        width: 80%;
     }
     /* End of Section 1 */
 
@@ -384,7 +386,394 @@ body {
         padding: 20px;
         display: flex;
         flex-direction: row;
+        justify-content: space-evenly;
+        background-image: 
+        linear-gradient(
+        rgba(8, 10, 29, 0.536), 
+        rgba(26, 30, 65, 0.536)
+        );
+    }
+}
+@media screen and (max-width:1200px) and (min-width:440px){
+    /* Section 1 */
+    .section-1 {
+        width: 100%;
+        height: 100%;
+    }
+    .landing {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        background-image: 
+        linear-gradient(
+        rgba(8, 10, 29, 0.836), 
+        rgba(26, 30, 65, 0.836)
+        ),
+        url("./../assets/cover1.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 0 50px;
+        align-items: center;
+        flex: 0.2;
+        color: white;
+        font-family: 'Courier New', Courier, monospace;
+    }
+    .p-header {
+        display: block;
+        font-size: 20px;
+    }
+    .logo {
+        display: flex;
+        flex-direction: row;
         justify-content: space-around;
+        align-content: center;
+        align-items: center;
+    }
+    .logo p {
+        font-weight: bold;
+        font-size: 30px;
+    }
+    .arrow-icon {
+        padding: 10px;
+        width: 35px;
+        height: 35px;
+    }
+    .banner-container {
+        flex: 0.5;
+        padding: 60px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 53px;
+        color: white;
+    }
+    .line2{
+        margin-left: 50px;
+        width: 90%;
+    }
+    .buttons-container {
+        z-index: 10;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-content: center;
+        align-items: center;
+    }
+    .btn-store {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-content: center;
+        align-items: center;
+        padding: 10px;
+        width: 360px;
+        height: 90PX;
+        border-radius: 55px;
+        text-align: center;
+        background-color: rgb(93, 111, 210);
+        font-size: 25px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: white;
+    }
+    .btn-store:active{
+        -webkit-transform:scale(0.9); 
+        -moz-transform:scale(0.9); 
+        -ms-transform:scale(0.9); 
+        -o-transform:scale(0.9); 
+        transform:scale(0.9); 
+        -webkit-box-shadow:0px 0px 20px #FFF; 
+        -moz-box-shadow:0px 0px 20px #FFF; 
+        -o-box-shadow:0px 0px 20px #FFF; 
+        box-shadow:0px 0px 20px #FFF; 
+    }
+    .btns-icon {
+        width: 60px;
+        height: 60px;
+    }
+    .sports-list {
+        display: block;
+        flex: 0.2;
+        margin-top: 28px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 22px;
+        color: rgb(148, 173, 211);
+    }
+    .sports-list-mobile {
+        display: none;
+    }
+    .sport1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 90%;
+    }
+    li {
+        padding: 0 22px;
+        list-style: none;
+    }
+    /* End of Section 1 */
+
+    /* Section 2 */
+    .section-2 {
+        width: 100%;
+    }
+    .container2 {
+        display: flex;
+        flex-direction: column;
+    }
+    .sec-title {
+        padding: 0 20px;
+        font-size: 90px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: grey;
+        opacity: 0.8;
+    }
+    .sec-title-1 {
+        margin-left: 500px;
+        padding: 0 20px;
+        font-size: 90px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: grey;
+        opacity: 0.8;
+    }
+    .player1 {
+        position: absolute;
+        flex: 0.5;
+        z-index: 10;
+        width: 450px;
+        height: 750px;
+    }
+    .player1-1 {
+        position: absolute;
+        margin-left: 560px;
+        flex: 0.5;
+        z-index: 10;
+        width: 450px;
+        height: 750px;
+        
+    }
+    .features{
+        width: 100%;
+    }
+    .swiper-container {
+        display: none;
+    }
+    .ft-title {
+        display: flex;
+        flex-direction: row;
+    }
+    .title {
+        color: grey;
+        font-size: 35px;
+        opacity: 08;
+        text-align: left;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+    }
+    .num {
+        color: black;
+        font-size: 35px;
+        margin-right: 5px;
+        border-bottom: solid 4px rgb(93, 111, 210);
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+    }
+    .num3 {
+        color: black;
+        font-size: 35px;
+        margin-right: 5px;
+        border-bottom: solid 4px white;
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+    }
+    
+    .square-mode {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-content: flex-end;
+        align-items: center;
+        text-align: left;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color:white;
+        height: 290px !important;
+    }
+    .square-mode-1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-content: flex-start;
+        align-items: center;
+        text-align: left;
+        padding-left: 15px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color:white;
+        height: 290px !important;
+    }
+    .inner {
+        display: flex;
+        flex-direction: column;
+    }
+    .p-features {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        width: 550px;
+        padding-right: 15px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 30px;
+    }
+    .white {
+        color: black;
+    }
+    .grey {
+        color: black;
+        background-color: 	#F2F1EF;
+    }
+    .purple {
+        background-color: rgb(93, 111, 210);
+    }
+    .dark-purple {
+        background-color: rgba(26, 30, 65, 0.836);
+        color: white;
+    }
+    
+    /* End of Section 2 */
+
+    /* Section 3 */
+    .section-3 {
+        width: 100%;
+    }
+    .actions {
+        display: flex;
+        flex-direction: column;
+    }
+    .action {
+        display: flex;
+        flex-direction: column;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        padding-bottom: 20px;
+    }
+    .action-img {
+        width: 100%;
+        height: 700px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .img1 {
+        background-image: url("./../assets/active.jpg") ;
+    }
+    .img2 {
+        background-image: url("./../assets/coach.jpg") ;
+    }
+    .img3 {
+        background-image: url("./../assets/team.jpg") ;
+    }
+    .cont-number {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        margin-top: 60%;
+        margin-left: 20px; 
+        width: 120px;
+        height: 120px;
+        background-color: rgb(93, 111, 210);
+    }
+    .number {
+        width: 30px;
+        font-size: 30px;
+        color: white;
+        border-bottom: solid 4px white;
+    }
+    .action-title {
+        padding: 10px;
+        color: grey;
+        opacity: 0.8;
+        font-size: 55px;
+        margin-left: 20px;
+    }
+    .action-text {
+        width: 70%;
+        text-align: initial;
+        margin-left: 20px;
+        font-size: 40px;
+    }
+    .hr {
+        width: 35px;
+        height: 10px;
+        margin-left: 20px;
+        background-color:rgb(93, 111, 210);
+        
+    }
+    /* End of section 3 */
+
+    /* Section 4 */
+    .section-4 {
+        width: 100%;
+    }
+    .footer {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-image: 
+        linear-gradient(
+        rgba(8, 10, 29, 0.836), 
+        rgba(26, 30, 65, 0.836)
+        ),
+        url("./../assets/cover2.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+    .logo-play {
+        margin-top: 160px;
+        margin-left: 41%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        padding: 10px;
+        width:200px;
+        height:200PX;
+        border-radius: 30px;
+        background-color: rgb(93, 111, 210);
+    }
+    .foo-txt {
+        margin-left: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+    .p1 {
+        margin-block-start: 1em;
+        margin-block-end: 0em;
+        font-size: 92px;
+        letter-spacing: 10px;
+    }
+    .p2 {
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+        font-size: 45px;
+    }
+    .media-icons {
+        padding: 20px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
         background-image: 
         linear-gradient(
         rgba(8, 10, 29, 0.536), 
