--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ body {
         height: 100%;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
         background-image: 
         linear-gradient(
         rgba(8, 10, 29, 0.836), 
@@ -34,13 +35,12 @@ body {
         justify-content: space-between;
         padding: 0 50px;
         align-items: center;
-        flex: 0.2;
         color: white;
         font-family: 'Courier New', Courier, monospace;
     }
     .p-header {
         display: block;
-        font-size: 20px;
+        font-size: 15px;
     }
     .logo {
         display: flex;
@@ -59,21 +59,27 @@ body {
         height: 35px;
     }
     .banner-container {
-        flex: 0.5;
-        padding: 60px;
+        margin-top: 50px;
+        margin-left: 5%;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 53px;
+        font-size: 65px;
+        letter-spacing: 8px;
         color: white;
     }
+    .line1{
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+    }
     .line2{
-        margin-left: 50px;
+        margin-left: 25%;
         width: 90%;
+        margin-block-start: 0em;
+        margin-block-end: 0em;
     }
     .buttons-container {
-        z-index: 10;
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: center;
         align-content: center;
         align-items: center;
     }
@@ -84,14 +90,18 @@ body {
         align-content: center;
         align-items: center;
         padding: 10px;
-        width: 360px;
-        height: 90PX;
+        margin: 20px;
+        width: 330px;
+        height: 60PX;
         border-radius: 55px;
         text-align: center;
         background-color: rgb(93, 111, 210);
         font-size: 25px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         color: white;
+    }
+    .btn-store:hover {
+        cursor: pointer;
     }
     .btn-store:active{
         -webkit-transform:scale(0.9); 
@@ -105,30 +115,16 @@ body {
         box-shadow:0px 0px 20px #FFF; 
     }
     .btns-icon {
-        width: 60px;
-        height: 60px;
+        width: 40px;
+        height: 40px;
     }
     .sports-list {
-        display: block;
-        flex: 0.2;
-        margin-top: 28px;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 22px;
-        color: rgb(148, 173, 211);
+        display: none;
     }
     .sports-list-mobile {
         display: none;
     }
-    .sport1 {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        width: 90%;
-    }
-    li {
-        padding: 0 22px;
-        list-style: none;
-    }
+    
     /* End of Section 1 */
 
     /* Section 2 */
@@ -405,6 +401,7 @@ body {
         height: 100%;
         display: flex;
         flex-direction: column;
+        justify-content: space-around;
         background-image: 
         linear-gradient(
         rgba(8, 10, 29, 0.836), 
@@ -421,7 +418,6 @@ body {
         justify-content: space-between;
         padding: 0 50px;
         align-items: center;
-        flex: 0.2;
         color: white;
         font-family: 'Courier New', Courier, monospace;
     }
@@ -446,7 +442,6 @@ body {
         height: 35px;
     }
     .banner-container {
-        flex: 0.5;
         padding: 60px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: 53px;
@@ -497,7 +492,6 @@ body {
     }
     .sports-list {
         display: block;
-        flex: 0.2;
         margin-top: 28px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: 22px;
@@ -878,7 +872,10 @@ body {
         width: 20px;
         height: 20px;
     }
-    .sports-list {
+    .sports-list{
+        display: none;
+    }
+    .sports-list-mobile {
         margin-top: 30px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: 14px;
