--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,8 @@ body {
         flex-direction: column;
     }
     .sec-title {
+
+        margin-left: 800px;
         padding: 0 20px;
         font-size: 90px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -143,8 +145,8 @@ body {
         opacity: 0.8;
     }
     .sec-title-1 {
-        margin-left: 500px;
         padding: 0 20px;
+        margin-left: 200px;
         font-size: 90px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         color: grey;
@@ -156,10 +158,11 @@ body {
         z-index: 10;
         width: 450px;
         height: 750px;
+        margin-left: 200px;
     }
     .player1-1 {
         position: absolute;
-        margin-left: 560px;
+        margin-left: 860px;
         flex: 0.5;
         z-index: 10;
         width: 450px;
@@ -185,6 +188,9 @@ body {
         margin-block-start: 0em;
         margin-block-end: 0em;
     }
+    .left-title {
+        margin-left: 200px;
+    }
     .num {
         color: black;
         font-size: 35px;
@@ -204,9 +210,7 @@ body {
     
     .square-mode {
         display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
-        align-content: flex-end;
+        flex-direction: row-reverse;
         align-items: center;
         text-align: left;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -228,11 +232,20 @@ body {
     .inner {
         display: flex;
         flex-direction: column;
+        align-content: center;
+        text-align: start;
     }
     .p-features {
         display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
+        margin-right: 200px;
+        width: 550px;
+        padding-right: 15px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 30px;
+    }
+    .p-features-1 {
+        display: flex;
+        margin-left: 200px;
         width: 550px;
         padding-right: 15px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -263,14 +276,24 @@ body {
         display: flex;
         flex-direction: column;
     }
-    .action {
+    .action1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+    .action-container {
+        width: 700px;
         display: flex;
         flex-direction: column;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        padding-bottom: 20px;
+        justify-content: center;
+        align-items: center;
+    }
+    .action {
+        display: none;
     }
     .action-img {
-        width: 100%;
+        width: 793px;
         height: 700px;
         background-repeat: no-repeat;
         background-size: cover;
@@ -290,8 +313,19 @@ body {
         justify-content: center;
         align-content: center;
         align-items: center;
-        margin-top: 60%;
-        margin-left: 20px; 
+        margin-left: 735px;
+        margin-top: 250px;
+        width: 120px;
+        height: 120px;
+        background-color: rgb(93, 111, 210);
+    }
+    .cont-number-left {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        margin-left: -65px;
+        margin-top: 250px;
         width: 120px;
         height: 120px;
         background-color: rgb(93, 111, 210);
@@ -494,7 +528,7 @@ body {
         display: block;
         margin-top: 28px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        font-size: 22px;
+        font-size: 25px;
         color: rgb(148, 173, 211);
     }
     .sports-list-mobile {
@@ -521,14 +555,13 @@ body {
         flex-direction: column;
     }
     .sec-title {
-        padding: 0 20px;
+        margin-left: 450px;
         font-size: 90px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         color: grey;
         opacity: 0.8;
     }
     .sec-title-1 {
-        margin-left: 500px;
         padding: 0 20px;
         font-size: 90px;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
