--- a/css/styles.css
+++ b/css/styles.css
@@ -379,21 +379,22 @@ body {
         background-position: center;
     }
     .logo-play {
-        margin-top: 160px;
-        margin-left: 41%;
+        position: absolute;
+        margin-top: 14%;
+        margin-left: 20%;
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-content: center;
         align-items: center;
         padding: 10px;
-        width:200px;
-        height:200PX;
+        width:100px;
+        height:100PX;
         border-radius: 30px;
         background-color: rgb(93, 111, 210);
     }
     .foo-txt {
-        margin-left: 30px;
+        margin-left: 60px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -404,13 +405,13 @@ body {
     .p1 {
         margin-block-start: 1em;
         margin-block-end: 0em;
-        font-size: 92px;
-        letter-spacing: 10px;
+        font-size: 72px;
+        letter-spacing: 12px;
     }
     .p2 {
         margin-block-start: 0em;
         margin-block-end: 0em;
-        font-size: 45px;
+        font-size: 37px;
     }
     .media-icons {
         padding: 20px;
@@ -686,6 +687,9 @@ body {
         flex-direction: column;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         padding-bottom: 20px;
+    }
+    .action1 {
+        display: none;
     }
     .action-img {
         width: 100%;
@@ -1046,6 +1050,9 @@ body {
         flex-direction: column;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         padding-bottom: 20px;
+    }
+    .action1 {
+        display: none;
     }
     .action-img {
         width: 100%;
